adding display of generated sCASP code

--- a/docassemble/scasp/data/questions/DAScasp.yml
+++ b/docassemble/scasp/data/questions/DAScasp.yml
@@ -11,6 +11,10 @@ features:
 ---
 template: DAScasp_show_answers
 content: |
+
+  For Debugging:
+  <pre>${database.slurp()}</pre>
+
   You asked:
   **${ answer['query'] }**
   
