--- a/docassemble/scasp/data/questions/DAScasp.yml
+++ b/docassemble/scasp/data/questions/DAScasp.yml
@@ -26,7 +26,7 @@ content: |
   % endfor
   % endif
   
-  % for e in answer['models']:
+  % for e in a['models']:
   
   ##### Why? (click to expand)
   ${ e['explanations'] }
