--- a/docassemble/scasp/data/questions/DAScasp.yml
+++ b/docassemble/scasp/data/questions/DAScasp.yml
@@ -33,6 +33,8 @@ content: |
   % endfor
   % endif
   
+  ${ answer['nlg_answer'] }
+  
   % if len(a['models']) == 1:
   There is 1 explanation for this answer:
   % else:
@@ -62,4 +64,10 @@ code: |
   answer = sendQuery(database.path(), scasp_number)
   if not defined('show_models'):
     show_models = False
----
+  for answer in answer['answers']:
+    query = answer['query']
+    query = query.replace('I would like to know if ','')
+    for b in answer['bindings']:
+      splitbinding = b.split(' : ')
+      query = query.replace(splitbinding[0],splitbinding[1])
+    answer['nlg_answer'] = query
