improving answer display

--- a/docassemble/scasp/data/questions/DAScasp.yml
+++ b/docassemble/scasp/data/questions/DAScasp.yml
@@ -26,14 +26,12 @@ content: |
   % endif
 
   % for a in answer['answers']:
-  #### Scenario ${ loop.index+1 }
+  #### Scenario ${ loop.index+1 }: ${ capitalize(a['nlg_answer']) }
   %if 'bindings' in a:
   % for b in a['bindings']:
   * ${ b }
   % endfor
   % endif
-  
-  ${ a['nlg_answer'] }
   
   % if len(a['models']) == 1:
   There is 1 explanation for this answer:
