--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-docassemble = "*"
-"docassemble.base" = "*"
+lark = "*"
+pyyaml = "*"
 
 [dev-packages]
 pytest = "*"
